releases/v0.7.0/source/docs/2026-09-22-MarkFlow开发指南-v1.2.md
# MarkFlow 开发指南

> 文档日期：2026-09-22
> 文档版本：v1.2
> 适用版本：v0.6.0 及以后
> 读者：参与 MarkFlow 开发 / 维护的工程师与 AI Coding 助手

---

## 1. 技术栈总览

| 层 | 技术 | 说明 |
|---|---|---|
| 桌面框架 | Tauri 2 | Rust 后端 + WebView2 前端容器，Windows 首发 |
| 前端 | React 19 + TypeScript + Vite | 严格模式（noUnusedLocals 等） |
| 样式 | Tailwind CSS 4 | `@theme` 设计令牌（主色 blue-600，`src/index.css`） |
| 编辑器 | Tiptap 3（ProseMirror）+ tiptap-markdown；CodeMirror 6 | 可视化 / 源码双模式 |
| PDF | pdfjs-dist v5 | Canvas 渲染 + 跨页文本搜索 |
| 数据 | SQLite（rusqlite bundled，WAL） | 表：libraries / files / extracted_content / search_fts / file_versions / annotations / export_jobs / settings |
| 全文索引 | FTS5 trigram | 支持中文子串匹配 |
| 文件监听 | notify v7 | 递归监听 + 防抖重扫 |
| 回收站 | trash v5 | 删除进系统回收站 |
| OCR | Windows.Media.Ocr（windows crate 0.61） | 系统 WinRT 能力 |
| AI | reqwest（rustls）+ OpenAI 兼容 SSE | 流式经 Tauri Channel 推送 |
| 密钥 | keyring v3（Windows 凭据库） | API Key 不落文件 |
| 组件 | Pandoc / LibreOffice / Edge（探测式可选） | 参数数组调用 + 超时 |

## 2. 环境搭建

1. **Node.js ≥ 20** 与 npm 10+。
2. **Rust stable（MSVC）**：rustup 安装 `stable-x86_64-pc-windows-msvc`。
3. **Visual Studio Build Tools 2022**：勾选「使用 C++ 的桌面开发」工作负载（MSVC 链接器 + Windows SDK）。
4. **可选组件**（按需）：Pandoc（转换 / 导入）、LibreOffice（高保真预览）；Microsoft Edge 通常已内置（PDF 打印管线）。

```powershell
npm install                 # 前端依赖（镜像不可用时加 --registry=https://registry.npmmirror.com）
npm run tauri dev           # 开发模式：启动桌面窗口（前端固定端口 1420）
```

> 本仓库 `src-tauri/.cargo/config.toml` 配置了 rsproxy 镜像（外网代理中断时的本地开发保障）。
> 若 cargo 报 `CRYPT_E_REVOCATION_OFFLINE`，加环境变量 `CARGO_HTTP_CHECK_REVOKE=false`。

## 3. 常用命令

| 命令 | 说明 |
|---|---|
| `npm run tauri dev` | 开发模式（热重载） |
| `npm run build` | 前端类型检查（tsc 严格）+ Vite 生产构建（输出 dist/） |
| `npm run tauri build` | 完整发布构建（Release 编译 + NSIS 安装包） |
| `cargo test`（src-tauri 下） | Rust 测试（见 §5，当前 68 项 + 3 个性能 Spike 忽略项） |
| `npm test` | 前端纯逻辑单元测试（Vitest，语言识别 / 诊断 / 字数统计） |
| `cargo test --profile spike spike_50k -- --ignored --nocapture` | 5 万文件性能基准（§17.1） |
| `cargo check` / `cargo clippy` | 编译检查 / 静态分析 |

要求：提交前 `cargo test`、`npm run build`、`npm test` 必须全绿且零警告；不隐藏 Error / Warning，不删测试绕过失败。

## 4. 工程结构与模块职责

### 4.1 Rust（src-tauri/src/）

| 模块 | 职责 | 要点 |
|---|---|---|
| `format.rs` | 格式注册表 | 扩展名 → 格式 id / 中文显示名；未知回退 other；**显示名唯一来源**（DTO 携带 formatLabel） |
| `library.rs` | 文档库核心 | 库 CRUD、**增量扫描**（`load_existing` → `scan_prepare` 无锁遍历与提取 → `scan_apply` 持锁短事务；文件 id 稳定，未变化文件不重复提取）、排除 / 隐藏 / 上限 20 万 / 取消与进度回调、查询、`migrate_path_refs`（重命名 / 移动时迁移历史与批注） |
| `editor.rs` | 编辑闭环 | 读 / 原子保存（临时文件 + fsync + rename）/ 冲突检测（`ERR_CONFLICT` 哨兵）/ 快照与恢复（每文件 20 版）/ `create_text_file`；只读属性检测（`read_only`）；`read_text_file_with` 接受可配置的编辑大小上限（硬上限 256MB）；`save_text_file_as` 支持显式的编码 / 换行符转换（默认按磁盘原样写回） |
| `office.rs` | OOXML 提取 | zip + roxmltree 解析 DOCX/XLSX/PPTX；20MB 文件、32MB 条目上限；不执行宏 |
| `ocr.rs` | 图片 OCR | Windows.Media.Ocr；专用阻塞式（FactoryCache 自动 MTA）；识别文本写提取 + FTS |
| `convert.rs` | 转换 | DOCX 预检（加密阻断 / 宏 / 修订 / 批注提示）；Pandoc→GFM（60s 超时、附件相对目录）；LibreOffice→PDF（独立 Profile、120s、临时清理） |
| `delivery.rs` | 交付中心 | 预检（SHA-256 冻结 + 门禁）、五格式生成（临时目录）、产物验证、原子落盘、export_jobs 记录 |
| `xlsxview.rs` | XLSX 原生表格 | 解析 styles.xml（字体 / 填充 / 边框 / 对齐 / 数字格式 / 主题色）、列宽行高、合并单元格、冻结窗格；数字与日期格式化（含中文日期）；公式用缓存结果；隐藏表 / 行 / 列不显示 |
| `pptxslides.rs` | PowerPoint 逐页图片 | 用 PowerPoint COM 逐页导出 PNG 到预览缓存，`pptx:progress` 事件推送进度；目录轮询判定「第 N 张在 N+1 张出现后才算完整」；读取图片命令严格校验缓存键与页码 |
| `officepdf.rs` | Office 版式预览 | 用本机 Microsoft Office（COM，PowerShell 固定脚本）只读、禁宏、无界面导出 PDF；缓存 / 清理；已运行的 Office 实例不被退出 |
| `component_manager.rs` | 组件探测 | Pandoc / LibreOffice / Edge 路径与版本；`run_with_timeout` 通用 sidecar 执行器 |
| `tasks.rs` | 任务中心 | 任务登记 / 进度 / 取消旗标 / 完成 / 历史裁剪（内存 100 条）；`tasks:updated` 事件 |
| `watch.rs` | 文件监听 | notify 递归 + 1.2s 防抖 + 排除目录过滤（忽略应用自身写入与 `.markflow-` 临时文件）→ 增量重扫 → `library:changed`；单文件模式不监听 |
| `openfile.rs` | 打开任意文件 | 解析文件归属的文档库；库外文件建立「单文件模式」隐式库（`settings.adhoc = true`，只索引已打开文件，不在库列表中显示）；启动参数 / 二次启动的待打开队列；最近文件 |
| `textenc.rs` | 文本编码 | 检测 UTF-8 / BOM / UTF-16 / GBK，按原编码与换行符写回，无法无损编码时拒绝保存；`Encoding::from_label` 供显式转换解析目标编码 |
| `external_tools.rs` | 外部工具 | 用 VS Code / PowerShell / CMD / 资源管理器打开文档库内的文件或目录；路径以参数数组传递（`Command::args`，不拼命令行），中文 / 空格路径安全；`resolve_target` 校验路径不越出库根；`find_vscode` 探测常见安装位置与 PATH 中的 `code.cmd` |
| `shell.rs` | 外壳行为 | 通知区域（托盘）图标的创建 / 移除、关闭窗口时隐藏（`on_window_event` 里 `prevent_close` + `hide`）、开机启动（`reg add/delete` 写当前用户 `Run` 项，参数 `--autostart`）、`close_to_tray` 偏好持久化到 `settings` 表；托盘菜单「退出」通过 `request-quit` 事件交给前端确认后调用 `quit_app` |
| `selfwrite.rs` | 自写入标记 | 保存产生的文件事件不再触发整库重扫 |
| `images.rs` | 文档内图片 | 粘贴 / 导入的图片保存到文档旁 `assets/`（唯一文件名、扩展名白名单、20MB 上限、路径校验），同步登记进索引后返回相对路径；命令 `import_image_asset` / `save_image_bytes`（二进制 IPC：请求体为原始字节，参数放请求头并 URL 编码） |
| `ai.rs` | AI 网关 | Provider CRUD / 更新（keyring 存 Key）、连通性测试分类、上下文组装与敏感门禁（逐文件扫描，用户输入同样扫描）、资料以带边界的 user 消息注入（防 Prompt 注入）、SSE 流式对话（按字节缓冲）、取消、备用 Provider 回退（仅网络 / 超时 / 429 / 5xx 且尚无输出） |
| `sensitive.rs` | 敏感扫描 | 9 类规则（正则；用显式 ASCII 边界而非 `\b`，避免紧贴中文时漏报），命中脱敏并标注来源文件 |
| `checks.rs` | 质量检查 | 标题层级 / 断链（链接解析器）/ 空章节 / 敏感；错误 / 警告 / 建议三级 |

### 4.2 前端（src/）

| 目录 / 文件 | 职责 |
|---|---|
| `lib/types.ts` / `lib/api.ts` | 后端类型镜像与 invoke 封装（camelCase 对应 serde） |
| `lib/format.ts` | 格式徽标配色、大小 / 时间格式化、可编辑格式集合 |
| `components/LibraryContext.tsx` | 全局状态：库列表 / 当前库 / 扫描状态 / 视图请求 / 编辑与查看器状态 / 文件监听事件；工作区 `workspace / expandedLibs`（并列库，持久化于 localStorage `markflow.workspace.*`）、文档标签 `tabs / activeTabId / dirtyTabs`（`TabScope` 把 `current / openFile / viewerFile` 改写为各标签自己的视图，所有标签面板保持挂载；`ZoomScope` 保证只有激活标签驱动状态栏缩放）；`confirmCloseTabs`（关闭标签 / 移除库时确认未保存修改）、`confirmDiscard`（退出应用前的整体确认）、`openPath`（打开任意文件）、启动参数与拖放处理 |
| `components/PdfViewer.tsx` | 连续滚动 PDF 查看器：`PdfPage` 用 IntersectionObserver 只渲染视口附近页面并渲染 PDF.js `TextLayer`；`PdfThumb` 懒加载缩略图；自适应宽度 × 缩放 |
| `components/office/` | `XlsxGrid`（Excel 风格表格 + 粘性冻结窗格）、`PptxViewer`（Office 逐页图片，边导边显示）、`DocxWebView`（docx-preview 内置渲染 + 目录跳转）、`PptxWebViewer`（pptx-renderer 内置渲染 + 缩略图）、`safeLinks.ts`（拦截文档内超链接，仅 http / https / mailto 且需确认；旧格式友好报错） |
| `lib/useExternalChange.ts` | 窗口重新获得焦点时比较 mtime，外部修改后触发刷新 |
| `components/DialogContext.tsx` | 应用内 `alert / confirm / prompt`（禁止再使用原生对话框） |
| `components/editor/LocalImage.tsx` | 编辑器图片节点：Markdown 里保持相对路径，显示时经 `read_file_bytes` 读字节生成 blob URL（带缓存，越出库根拒绝） |
| `components/EditorStatusContext.tsx` | 编辑器向状态栏发布字数 / 光标位置 / 代码编辑信息（语言、编码、换行符、缩进、诊断数、保存状态，含各自的点击回调），仅激活标签发布 |
| `components/editor/CodeEditor.tsx` | 统一的 CodeMirror 6 代码编辑器：所有文件类型共用同一套扩展工厂，语言 / 换行 / 只读 / 诊断均用 `Compartment` 动态切换（不重建编辑器、不丢光标与撤销栈）；大文件保护模式用轻量扩展集合替换 `basicSetup` |
| `components/editor/ProblemsPanel.tsx` | 「问题」侧栏面板：列出诊断，点击调用 `CodeEditorApi.gotoOffset` 定位 |
| `lib/codeLanguages.ts` | 语言注册表：唯一的「文件 → 语言」判定入口（文件名 → 扩展名 → Shebang → 纯文本），各语言包动态 `import()` 按需加载；`detectIndent` 按内容推断制表符 / 空格宽度 |
| `lib/diagnostics.ts` | 诊断适配器：JSON（自研递归下降解析器，精确到字符位置，不依赖引擎报错文案）/ JSONC（容忍注释与尾逗号）/ YAML（`yaml` 包）/ XML（`DOMParser`），统一 `validateDocument` 入口，新增语言的校验只需实现 `Validator` 接口 |
| `lib/wordCount.ts` | 字数统计口径（中日韩逐字 + 其余按词） |
| `components/TabStrip.tsx` | 标题栏里的文档标签行：文档保留至手动关闭，未保存显示黄点，同名文件才显示库名 |
| `components/LibraryManagePanel.tsx` | 侧边栏「管理文档库」模式：打开 / 关闭（仅从窗口拿掉）/ 移除（删除索引，重新添加同一文件夹沿用库 ID 恢复历史与批注） |
| `components/MenuBar.tsx` | 菜单栏与全局快捷键（Ctrl+O / Ctrl+N / 缩放 / F11） |
| `lib/prefs.ts` | 用户偏好（自动保存 / 预览引擎 / 主题，存于本地存储）；`initTheme()` 在渲染前给 `<html>` 加 `dark` 类 |
| `components/settings/ui.tsx` | 设置页通用控件：`SettingRow`（名称 + 说明 \| 控件）、`SettingGroup`、`Toggle`、`Segmented` |
| `components/TasksContext.tsx` | 后台任务列表 |
| `components/ZoomContext.tsx` | 文档缩放（视图声明范围，状态栏渲染控件） |
| `components/EditorPane.tsx` | 编辑器（工具栏 / 模式切换 / 保存 / 冲突对话框 / 历史下拉 / 检查面板 / AI 面板挂载） |
| `components/PdfViewer.tsx` `ImagePreviewPane.tsx` `OfficePreviewPane.tsx` | 只读查看器（支持外部字节的高保真 PDF） |
| `views/*` | 一级导航视图 |

### 4.3 事件契约（Rust → 前端）

| 事件 | 载荷 | 消费方 |
|---|---|---|
| `scan:completed` / `scan:failed` / `scan:canceled` | libraryId、fileCount、skipped / error | LibraryContext（状态栏、列表刷新） |
| `library:changed` / `library:rescan_failed` | libraryId、fileCount / error | 文件监听重扫后的界面刷新 |
| `file:saved` | libraryId、relativePath | contentVersion 自增（编辑/保存联动） |
| `tasks:updated` | TaskInfo[] | 任务中心与状态栏 |
| `delivery:completed` | id、ok | 交付历史刷新 |
| `pptx:progress` | requestId、progress{key,count,width,height,ready} | PptxViewer（导出一页显示一页） |
| `open-paths` | string[] | 二次启动（如双击 `.md`）传来的待打开文件；前端另在启动时调用 `take_pending_open_paths` 取启动参数 |

### 4.4 数据一致性约定

- **文件系统为真源**：任何索引变更都由「全量重扫」落地（单事务含 FTS 清理，失败回滚），禁止在代码里手写 files 行迁移。
- 扫描上限 20 万条目；单文件提取 / 编辑上限 2MB（文本）与 20MB（Office）；超过如实标注 `too_large`。
- FTS 与 files 行同生命周期：重建某库索引时先按 file_id 清 FTS 再删行，杜绝孤儿索引。

## 5. 测试

- Rust：68 项单元 / 集成测试（格式识别、扫描排除、库 CRUD 往返与库名唯一、移除后重新添加沿用库 ID、提取与搜索、编辑冲突历史、只读文件、可配置编辑上限、显式编码 / 换行符转换、任务生命周期、Office 提取、XLSX 样式、文本编码、外部工具路径解析、组件探测、监听路径过滤等），另有 3 项性能 Spike 默认忽略。
- 前端：`npm test`（Vitest）覆盖纯逻辑模块——语言识别 / 缩进推断（`codeLanguages.test.ts`）、诊断适配器含大文档定位（`diagnostics.test.ts`）、字数统计（`wordCount.test.ts`）。
- 性能 Spike（§17.1）：`cargo test --profile spike spike_50k -- --ignored --nocapture`，生成 5 万混合文件实测扫描 / 检索 / 重建并输出耗时。
- 前端：`npm run build`（tsc 严格模式）保证类型正确；`npm test`（Vitest）覆盖纯逻辑模块（语言识别、诊断适配器、字数统计）；组件级测试（RTL）按路线图补齐。
- 约定：新增 Rust 功能必须带对应测试；Spike 结论固化为可重复执行的测试。

## 6. Git 工作流

- 分支：`feature/<name>`、`fix/<name>`（小写英文 + 连字符）；个人小改动可直接在 main。
- 提交：Conventional Commits（feat/fix/docs/refactor/chore…）；一个提交一个目的；禁止 update / 修改 / 临时 等无意义信息。
- 合并：`--no-ff` 保留分支脉络；合并前确认测试全绿。
- 推送：`git push origin main`；如遇凭据弹窗 / 卡死，参考《GitHub 推送排障与配置手册》（`D:\AIProjects\_ClaudeConfig\2026-09-19-GitHub推送排障与配置手册-v1.0.md`）：代理不可达时用 `git -c http.proxy= -c https.proxy= push`，远程同步用 FETCH_HEAD 与 HEAD 比对确认。
- 合并后立即推送 main 与功能分支，并以 `git fetch + FETCH_HEAD` 验证落地。

## 7. 发布流程（落地版全局规范）

1. **触发**：仅在用户明确说「发布 / Release / 打版本」时执行。
2. **版本号**：SemVer 0.x 阶段，新功能递增 MINOR、修复递增 PATCH。需要同步修改的版本号位置：
   - `package.json`、`package-lock.json`（npm install 刷新）
   - `src-tauri/tauri.conf.json` → `version`
   - `src-tauri/Cargo.toml` → `version`（`cargo update -p markflow` 同步 Cargo.lock）
3. **CHANGELOG**：`[Unreleased]` 内容整理为 `[X.Y.Z] - 日期`，分 Added / Changed / Fixed，禁止编造。
4. **构建**：`npm run tauri build`（bundle.targets 当前为 `["nsis"]`）。产物：
   - 安装包：`src-tauri/target/release/bundle/nsis/MarkFlow_X.Y.Z_x64-setup.exe`
   - 便携版：`src-tauri/target/release/markflow.exe`
5. **快照**：`releases/vX.Y.Z/`
   - 产物规范命名：`MarkFlow-vX.Y.Z-win-x64.exe` / `-portable.exe`
   - `source/`：`git archive --format=tar HEAD | tar -x -C releases/vX.Y.Z/source`（与 Release Commit 完全对应）
   - `MarkFlow-vX.Y.Z-source.zip`：同 archive 的 zip 版
   - `CHANGELOG.md`：复制根 CHANGELOG
   - `.gitignore` 已配置：仅 `source/` 与 `CHANGELOG.md` 入库，二进制产物排除
6. **提交与 Tag**：先提交 `release: MarkFlow vX.Y.Z`（版本与文档变更），再提交快照 `chore: 添加 vX.Y.Z 发布快照`；`git tag -a vX.Y.Z <release-commit-sha>`，Tag 指向 Release Commit。
7. **推送与 Release**：`git push origin main vX.Y.Z` → `gh release create vX.Y.Z --title "MarkFlow vX.Y.Z" --notes-file <notes> <artifacts...>`。
8. **验证**：`gh release view` 确认资产 uploaded；实际 `gh release download` 抽查哈希与本地一致。
9. **公开仓库检查**（仓库为 Public，发布前逐项确认，缺一不可）：
   - **Secret**：对工作区与全部历史扫描 API Key / Token / 私钥 / `.env`（测试夹具里的假 key 除外）；
   - **设计文档**：产品设计文档与 UI 概念图不入库（存放在 ai-coding-workspace 的 MarkFlow 项目目录），`git ls-files` 与历史中均不得出现 `产品设计` 路径；
   - **许可**：`LICENSE`（GPL-3.0）存在；新增依赖必须与 GPL-3.0 兼容；发布时用 `node scripts/gen-third-party-notices.mjs` 重新生成 `THIRD-PARTY-NOTICES.md`；
   - **提交邮箱**：使用 GitHub noreply 邮箱（`git config user.email`），不暴露个人邮箱；
   - **产物**：Release 资产只放安装包 / 便携版 / source.zip，不放含设计文档或客户数据的压缩包。
10. **报告**：按全局规范输出中文发布报告（产品 / 版本 / 构建 / 测试 / 快照 / 产物 / Commit / Tag / 已知问题 / 未执行项）。

### 7.0 深色主题的实现约定

- 深色主题不逐个组件写 `dark:` 类，而是在 `index.css` 里给 `html.dark` **重映射 Tailwind 颜色变量**（灰阶反转、主色 / 红 / 琥珀 / 绿的浅底色改深）；`bg-white` 单独映射为「表面色」（`--color-white` 本身不变，`text-white` 仍是白字）。
- 新写组件请继续只用 `gray-* / primary-* / white` 等语义类，不要写死十六进制颜色（编辑器等必须写死的地方，在 `index.css` 里补 `html.dark` 覆盖）。
- 需要始终保持浅色的「文档纸张」区域（Excel 表格容器等）加 `mf-light` 类；Word 页面 / PPT 幻灯片自带白底，靠 `.mf-docx-host` / `.mf-pptx-host` 固定文字颜色。

### 7.0.1 许可与合规

- 项目许可证：**GPL-3.0-only**（`LICENSE`；`package.json` 与 `Cargo.toml` 的 `license` 字段一致）。
- 新增依赖前先确认许可与 GPL-3.0 兼容（MIT / Apache-2.0 / BSD / ISC / MPL-2.0 / Zlib / Unicode / CC0 均可；GPL-2.0-only、专有、SSPL 等不可）；双许可依赖选用可兼容的一项。
- `THIRD-PARTY-NOTICES.md` 由 `scripts/gen-third-party-notices.mjs` 从锁文件与 `cargo metadata` 生成，依赖变化后重新生成并提交。
- Pandoc / LibreOffice / Edge / Windows OCR 不随应用分发，只在本机已安装时以独立进程调用，因此不受其许可约束应用本身。

### 7.1 内置 Office 渲染器（第三方依赖与许可）

| 依赖 | 许可 | 用途 | 说明 |
|---|---|---|---|
| `docx-preview` | Apache-2.0 | Word 内置渲染 | 依赖 jszip；约 75 KB（gzip 21 KB），动态加载 |
| `@aiden0z/pptx-renderer` | Apache-2.0 | PowerPoint 内置渲染 | 依赖 jszip / echarts；`pdfjs-dist` 为可选对等依赖（项目已有）；约 1.1 MB（gzip 346 KB），动态加载 |

- 两者都只在打开对应文档时 `import()`，不进入首屏包；渲染在应用内完成，不执行文档中的任何脚本。
- 测试「无 Office 环境」：设置环境变量 `MARKFLOW_NO_OFFICE=1` 再启动，Office / LibreOffice 引擎视为不存在。
- 安装依赖时若 npm 报网络错误，见下方「常见开发问题」的代理说明（清除 `HTTP(S)_PROXY` 后重试即可，勿把镜像地址写进 `package-lock.json`）。

## 8. 常见开发问题

| 问题 | 处理 |
|---|---|
| cargo 下载 `transfer too slow` / `CRYPT_E_REVOCATION_OFFLINE` | 项目已配 rsproxy 镜像；再加 `CARGO_HTTP_CHECK_REVOKE=false`；仍不通时清除代理环境变量直连国内镜像 |
| npm 安装超时 | 加 `--registry=https://registry.npmmirror.com`，必要时临时清除 HTTP(S)_PROXY 环境变量 |
| NSIS / WiX 下载失败 | tauri build 会从 GitHub 拉取打包器；网络不通时先恢复网络或配置代理后重试 |
| `git branch -vv` 显示 `[origin/main: gone]` | 本机沙箱不持久化 refs/remotes，属显示假象；用 `git fetch` + `head .git/FETCH_HEAD` 与 `git rev-parse HEAD` 比对 |
| 每次推送弹凭据选择窗口 | 系统级 `credential.helper=helper-selector` 排在链首（特定 PortableGit 环境）；按排障手册 §2.4 在仓库级写「空值 + 显式 GCM」 |
| cargo test 里 FTS 中文搜不到 | 确认查询词 ≥3 个字符（trigram 限制），短词走文件名 LIKE 路径 |
| Windows 路径大小写 | NTFS 不区分大小写：`Markflow` 与 `MarkFlow` 同目录，脚本中注意勿混用造成误判 |

## 9. 代码与文档约定

- 注释 / 文档 / 报告一律简体中文；标识符、命令、API 保持原始形式。
- 设计令牌只在 `src/index.css` 的 `@theme` 中定义；组件通过 Tailwind 类引用。
- 新增 Tauri 命令：Rust 侧实现 → `lib.rs` 的 `invoke_handler` 注册 → `lib/types.ts` + `lib/api.ts` 补类型与封装；涉及系统能力必须在 `capabilities/` 按需最小授权。
- 普通文档命名 `YYYY-MM-DD-内容-vX.Y.md`，存放于 `docs/`；README / CHANGELOG / AGENTS.md 等固定名文件除外。
- 每个正式版本的 `releases/vX.Y.Z/` 快照不可变；产物不入 Git，走 GitHub Releases。
